--- a/Instagram Post/index.html
+++ b/Instagram Post/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Like</title>
+    <title>@sukh8661 | Instagram</title>
     <link rel="stylesheet" href="CSS/style.css" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
       rel="stylesheet"
